--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.1.3",
     "next": "13.4.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
